Name:               pepper2
Version:            2.0.0
cabal-version:      >= 1.8
build-type:         Simple

Library
  Exposed-Modules:  Pepper2Main
                  , Parser
  Build-Depends:    base >= 3 && < 5
                  , megaparsec

Test-Suite test-pepper2
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  Main-is:          Tests.hs
  Build-Depends:    base >= 3 && < 5
                  , tasty
                  , tasty-hunit
                  , pepper2
